# DevOps_24_25

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README.txt  benchmark_all.sh  benchmark_result.txt  g_benchmark  makefile  mapping_results.csv  my_program  reference.fasta  result_benchmarking.txt
Data/: correct.fasta  correct.fastq  malformed.fasta  malformed.fastq
Python_for_vizu/: visu.py
html/: _kmer_index_8hpp.html  _kmer_index_8hpp.js  _kmer_index_8hpp__dep__incl.map  _kmer_index_8hpp__dep__incl.md5  _kmer_index_8hpp__incl.map  _kmer_index_8hpp__incl.md5  _kmer_index_8hpp_source.html  _mapper_8cpp.html  _mapper_8cpp__incl.map  _mapper_8cpp__incl.md5  _mapper_8hpp.html  _mapper_8hpp.js  _mapper_8hpp__dep__incl.map  _mapper_8hpp__dep__incl.md5  _mapper_8hpp__incl.map  _mapper_8hpp__incl.md5  _mapper_8hpp_source.html  _read_fasta_8cpp.html  _read_fasta_8cpp__incl.map  _read_fasta_8cpp__incl.md5  _read_fasta_8hpp.html  _read_fasta_8hpp.js  _read_fasta_8hpp__dep__incl.map  _read_fasta_8hpp__dep__incl.md5  _read_fasta_8hpp__incl.map  _read_fasta_8hpp__incl.md5  _read_fasta_8hpp_source.html  _read_fastq_8cpp.html  _read_fastq_8cpp__incl.map  _read_fastq_8cpp__incl.md5  _read_fastq_8hpp.html  _read_fastq_8hpp.js  _read_fastq_8hpp__dep__incl.map  _read_fastq_8hpp__dep__incl.md5  _read_fastq_8hpp__incl.map  _read_fastq_8hpp__incl.md5  _read_fastq_8hpp_source.html  _sequence_8cpp.html  _sequence_8cpp__incl.map  _sequence_8cpp__incl.md5  (+73 more)
reads_test/: correct.fasta  correct.fastq
src/: KmerIndex.cpp  KmerIndex.hpp  Mapper.cpp  Mapper.hpp  ReadFasta.cpp  ReadFasta.h  (+17 more)
(+39 files in other folders)
